--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -4,9 +4,8 @@
     "declaration": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "noImplicitAny": true,
-    "noUnusedExpression": true,
     "lib": ["es6", "dom"],
     "mapRoot": "./",
     "module": "es6",
