--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor"
   },
-  "dependencies": {
+  "peerDependencies": {
     "@angular/common": "^2.4.10",
     "@angular/compiler": "^2.4.10",
     "@angular/core": "^2.4.10",
@@ -29,6 +29,7 @@
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
   },
+  "dependencies": {},
   "devDependencies": {
     "@angular/cli": "1.0.0",
     "@angular/compiler-cli": "^2.4.10",
