--- a/package.json
+++ b/package.json
@@ -16,25 +16,24 @@
     "e2e": "protractor"
   },
   "peerDependencies": {
-    "@angular/common": "^2.4.10",
-    "@angular/compiler": "^2.4.10",
-    "@angular/core": "^2.4.10",
-    "@angular/forms": "^2.4.10",
-    "@angular/http": "^2.4.10",
-    "@angular/platform-browser": "^2.4.10",
-    "@angular/platform-browser-dynamic": "^2.4.10",
-    "@angular/router": "^3.3.1",
+    "@angular/common": ">=2.4.10",
+    "@angular/compiler": ">=2.4.10",
+    "@angular/core": ">=2.4.10",
+    "@angular/forms": ">=2.4.10",
+    "@angular/http": ">=2.4.10",
+    "@angular/platform-browser": ">=2.4.10",
+    "@angular/platform-browser-dynamic": ">=2.4.10",
     "core-js": "^2.4.1",
     "rxjs": "^5.0.1",
-    "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
   },
   "dependencies": {},
   "devDependencies": {
     "@angular/cli": "1.0.0",
-    "@angular/compiler-cli": "^2.4.10",
+    "@angular/compiler-cli": "4.0.3",
+    "@angular/router": "4.0.3",
     "@types/jasmine": "2.5.38",
-    "@types/node": "^6.0.42",
+    "@types/node": "^6.0.60",
     "codelyzer": "~2.0.0-beta.1",
     "cz-conventional-changelog": "^2.0.0",
     "jasmine-core": "2.5.2",
@@ -45,9 +44,9 @@
     "karma-coverage-istanbul-reporter": "^1.0.0",
     "karma-jasmine": "^1.0.2",
     "protractor": "~4.0.13",
-    "ts-node": "1.2.1",
-    "tslint": "^4.3.0",
-    "typescript": "~2.0.3"
+    "ts-node": "2.0.0",
+    "tslint": "^4.5.0",
+    "typescript": "~2.2.0"
   },
   "config": {
     "commitizen": {
