--- a/package.json
+++ b/package.json
@@ -15,26 +15,24 @@
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor"
   },
-  "peerDependencies": {
-    "@angular/common": ">=2.4.10",
-    "@angular/compiler": ">=2.4.10",
-    "@angular/core": ">=2.4.10",
-    "@angular/forms": ">=2.4.10",
-    "@angular/http": ">=2.4.10",
-    "@angular/platform-browser": ">=2.4.10",
-    "@angular/platform-browser-dynamic": ">=2.4.10",
+  "dependencies": {
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/http": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.0.1",
-    "zone.js": "^0.7.2"
+    "zone.js": "^0.8.4"
   },
-  "dependencies": {},
   "devDependencies": {
     "@angular/cli": "1.0.0",
-    "@angular/compiler-cli": "4.0.3",
-    "@angular/router": "4.0.3",
+    "@angular/compiler-cli": "^4.0.0",
+    "@angular/router": "^4.0.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.60",
-    "codelyzer": "~2.0.0-beta.1",
     "cz-conventional-changelog": "^2.0.0",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
