--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -6,6 +6,7 @@
     "experimentalDecorators": true,
     "noUnusedLocals": true,
     "noImplicitAny": true,
+    "strictNullChecks": false,
     "lib": ["es6", "dom"],
     "mapRoot": "./",
     "module": "es6",
