--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,16 @@
 machine:
   node:
-    version: 6.9.4
+    version: 8.4.0
+dependencies:
+  pre:
+    # Install Yarn
+    - sudo apt-key adv --fetch-keys http://dl.yarnpkg.com/debian/pubkey.gpg
+    - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+    - sudo apt-get update -qq
+    - sudo apt-get install -y -qq yarn
+  override:
+    - sudo rm -fr ~/.cache/yarn
+    - yarn install
 test:
   pre:
   override:
