--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "serve-aot": "ng serve --aot=true",
     "build-aot": "ng build --aot=true",
     "start": "ng serve",
-    "lint": "tslint \"src/**/*.ts\" --project src/tsconfig.json --type-check && tslint \"e2e/**/*.ts\" --project e2e/tsconfig.json --type-check",
+    "lint": "ng lint",
     "test": "ng test --watch=false",
     "test-watch": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
@@ -34,6 +34,7 @@
     "@angular/router": "^4.0.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.60",
+    "codelyzer": "^3.2.0",
     "cz-conventional-changelog": "^2.0.0",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
