--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test": "ng test --watch=false",
     "test-watch": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "e2e": "protractor"
+    "e2e": "protractor",
+    "release": "standard-version"    
   },
   "dependencies": {
     "@angular/common": "^4.0.0",
@@ -44,6 +45,7 @@
     "karma-coverage-istanbul-reporter": "^1.0.0",
     "karma-jasmine": "^1.0.2",
     "protractor": "~4.0.13",
+    "standard-version": "^4.2.0",
     "ts-node": "2.0.0",
     "tslint": "^4.5.0",
     "typescript": "~2.2.0"
