--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ before_install:
   - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
   - echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
   - sudo apt-get update && sudo apt-get install yarn
+addons:
+  chrome: stable
 install:
   - yarn install
 script:
