--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint": "ng lint",
     "test": "ng test",
     "test-once": "ng test --watch=false",
-    "test-ci": "ng test --watch=false --code-coverage | yarn coveralls",
+    "test-ci": "ng test --watch=false --code-coverage",
+    "coveralls": "cat coverage/lcov.info | yarn coveralls",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor",
     "release": "standard-version"
