--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "ng test",
     "test-once": "ng test --watch=false",
     "test-ci": "ng test --watch=false --code-coverage",
-    "coveralls": "cat coverage/lcov.info | yarn coveralls",
+    "send-coverage": "cat coverage/lcov.info | coveralls",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor",
     "release": "standard-version"
