--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "build-aot": "ng build --aot=true",
     "start": "ng serve",
     "lint": "ng lint",
-    "test": "ng test --watch=false",
-    "test-watch": "ng test",
+    "test": "ng test",
+    "test-once": "ng test --watch=false",
+    "test-ci": "ng test --watch=false --code-coverage",
+    "send-coverage": "cat coverage/lcov.info | coveralls",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor",
     "release": "standard-version"
@@ -36,6 +38,7 @@
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.60",
     "codelyzer": "^3.2.0",
+    "coveralls": "^3.0.0",
     "cz-conventional-changelog": "^2.0.0",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
