--- a/package.json
+++ b/package.json
@@ -20,14 +20,13 @@
     "e2e": "protractor",
     "release": "standard-version"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
+    "@angular/cli": "1.7.3",
     "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",    
+    "@angular/compiler": "^5.0.0",
+    "@angular/compiler-cli": "^5.2.9",
     "@angular/core": "^5.0.0",
-    "@angular/cli": "1.0.0",
-    "@angular/compiler-cli": "^5.0.0",
     "@angular/forms": "^5.0.0",
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
@@ -53,7 +52,7 @@
     "tsickle": "^0.27.5",
     "tslib": "1.9.0",
     "tslint": "^4.5.0",
-    "typescript": "~2.6.0",
+    "typescript": "~2.4.2",
     "zone.js": "^0.8.4"
   },
   "peerDependencies": {
