--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ng": "ng",
     "serve-aot": "ng serve --aot=true",
     "build-aot": "ng build --aot=true",
+    "build": "ng-packagr -p package.json",
     "start": "ng serve",
     "lint": "ng lint",
     "test": "ng test",
@@ -19,25 +20,21 @@
     "e2e": "protractor",
     "release": "standard-version"
   },
-  "dependencies": {
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.0.1",
-    "zone.js": "^0.8.4"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@angular/cli": "1.0.0",
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/router": "^4.0.0",
+    "@angular/cli": "1.7.3",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/compiler-cli": "^5.2.9",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/router": "^5.0.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.60",
     "codelyzer": "^3.2.0",
+    "core-js": "^2.4.1",
     "coveralls": "^3.0.0",
     "cz-conventional-changelog": "^2.0.0",
     "jasmine-core": "2.5.2",
@@ -47,27 +44,35 @@
     "karma-cli": "^1.0.1",
     "karma-coverage-istanbul-reporter": "^1.0.0",
     "karma-jasmine": "^1.0.2",
+    "ng-packagr": "^2.4.1",
     "protractor": "~4.0.13",
+    "rxjs": "^5.5.0",
     "standard-version": "^4.2.0",
     "ts-node": "2.0.0",
+    "tsickle": "^0.27.5",
+    "tslib": "1.9.0",
     "tslint": "^4.5.0",
-    "typescript": "~2.2.0"
+    "typescript": "~2.4.2",
+    "zone.js": "^0.8.4"
   },
   "peerDependencies": {
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
     "core-js": "^2.4.1",
-    "rxjs": "^5.0.1",
+    "rxjs": "^5.5.0",
     "zone.js": "^0.8.4"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "ngPackage": {
+    "lib": {
+      "entryFile": "src/public_api.ts"
     }
   }
 }
