feature(checkbox): implement simple checkbox

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "ng-packagr -p package.json",
     "start": "ng serve",
     "lint": "ng lint",
-    "test": "ng test",
+    "test": "ng test --code-coverage",
     "test-once": "ng test --watch=false",
     "test-ci": "ng test --watch=false --code-coverage",
     "send-coverage": "cat coverage/lcov.info | coveralls",
