--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test-ci": "ng test --watch=false --code-coverage",
     "send-coverage": "cat coverage/lcov.info | coveralls",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "e2e": "protractor",
+    "e2e": "protractor --watch=true",
     "release": "standard-version"
   },
   "dependencies": {},
@@ -31,24 +31,25 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
-    "@types/jasmine": "2.5.38",
+    "@types/jasmine": "~2.8.3",
+    "@types/jasminewd2": "^2.0.3",
     "@types/node": "^6.0.60",
     "codelyzer": "^3.2.0",
     "core-js": "^2.4.1",
     "coveralls": "^3.0.0",
     "cz-conventional-changelog": "^2.0.0",
     "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "2.5.0",
+    "jasmine-spec-reporter": "~4.2.1",
     "karma": "1.2.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-coverage-istanbul-reporter": "^1.0.0",
     "karma-jasmine": "^1.0.2",
     "ng-packagr": "^2.4.1",
-    "protractor": "~4.0.13",
+    "protractor": "~5.1.2",
     "rxjs": "^5.5.0",
     "standard-version": "^4.2.0",
-    "ts-node": "2.0.0",
+    "ts-node": "~4.1.0",
     "tsickle": "^0.27.5",
     "tslib": "1.9.0",
     "tslint": "^4.5.0",
