--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "ng lint",
     "test": "ng test --code-coverage",
     "test-once": "ng test --watch=false",
-    "test-ci": "ng test --watch=false --code-coverage",
+    "test-ci": "ng test --watch=false --code-coverage && ng e2e",
     "send-coverage": "cat coverage/lcov.info | coveralls",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor --watch=true",
@@ -46,6 +46,7 @@
     "karma-coverage-istanbul-reporter": "^1.0.0",
     "karma-jasmine": "^1.0.2",
     "ng-packagr": "^2.4.1",
+    "nodemon": "^1.17.3",
     "protractor": "~5.1.2",
     "rxjs": "^5.5.0",
     "standard-version": "^4.2.0",
