--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "ng lint",
     "test": "ng test --code-coverage",
     "test-once": "ng test --watch=false",
-    "test-ci": "ng test --watch=false --code-coverage && ng pree2e && ng e2e",
+    "test-ci": "ng test --watch=false --code-coverage && pree2e && e2e",
     "send-coverage": "cat coverage/lcov.info | coveralls",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor --watch=true",
