--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "lint": "ng lint",
     "test": "ng test --code-coverage",
     "test-once": "ng test --watch=false",
-    "test-ci": "ng test --watch=false --code-coverage && pree2e && e2e",
+    "test-ci": "ng test --watch=false --code-coverage && yarn e2e",
     "send-coverage": "cat coverage/lcov.info | coveralls",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "e2e": "protractor --watch=true",
+    "e2e": "ng e2e",
     "release": "standard-version"
   },
   "dependencies": {},
