--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "send-coverage": "cat coverage/lcov.info | coveralls",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "ng e2e",
-    "release": "standard-version"
+    "release": "standard-version",
+    "e2e:dev": "./scripts/e2e.dev.sh"
   },
   "dependencies": {},
   "devDependencies": {
