--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "lint": "ng lint",
     "test": "ng test --code-coverage",
     "test-once": "ng test --watch=false",
-    "test-ci": "yarn e2e && ng test --watch=false --code-coverage",
+    "test-ci": "yarn e2e-ci && ng test --watch=false --code-coverage",
     "send-coverage": "cat coverage/lcov.info | coveralls",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "e2e": "ng e2e",
+    "e2e-ci": "ng e2e",
     "release": "standard-version",
-    "e2e:dev": "./scripts/e2e.dev.sh"
+    "e2e": "./scripts/e2e.dev.sh"
   },
   "dependencies": {},
   "devDependencies": {
