--- a/circle.yml
+++ b/circle.yml
@@ -8,6 +8,7 @@ dependencies:
     - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
     - sudo apt-get update -qq
     - sudo apt-get install -y -qq yarn
+    - sudo apt-get install google-chrome-stable
   override:
     - sudo rm -fr ~/.cache/yarn
     - yarn install
