chore(yarn): remove yarn

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "ng lint",
     "test": "ng test --code-coverage",
     "test-once": "ng test --watch=false",
-    "test-ci": "yarn e2e-ci && ng test --watch=false --code-coverage",
+    "test-ci": "ng test --watch=false --code-coverage",
     "send-coverage": "cat coverage/lcov.info | coveralls",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e-ci": "ng e2e",
@@ -35,7 +35,7 @@
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "^6.0.60",
-    "codelyzer": "^3.2.0",
+    "codelyzer": "^4.3.0",
     "core-js": "^2.4.1",
     "coveralls": "^3.0.0",
     "cz-conventional-changelog": "^2.0.0",
@@ -54,7 +54,7 @@
     "ts-node": "~4.1.0",
     "tsickle": "^0.27.5",
     "tslib": "1.9.0",
-    "tslint": "^4.5.0",
+    "tslint": "^5.0.0",
     "typescript": "~2.4.2",
     "zone.js": "^0.8.4"
   },
