--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,13 @@ before_install:
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
-  - echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-  - sudo apt-get update && sudo apt-get install yarn
   - sudo apt-get install google-chrome-stable
 addons:
 apt:
 install:
-  - yarn install
+  - npm install
 script:
-  - yarn lint
-  - yarn test-ci
-  - yarn send-coverage
+  - npm run lint
+  - npm run test-ci
+  - npm run e2e-ci
+  - npm run send-coverage
