--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,6 @@ install:
 script:
   - npm run lint
   - npm run test-ci
-  - npm run e2e-ci
   - npm run send-coverage
+  - npm run e2e-ci
+  - npm run build
