--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e-ci": "ng e2e",
     "release": "standard-version",
-    "e2e": "./scripts/e2e.dev.sh"
+    "e2e": "./scripts/e2e.dev.sh",
+    "build:dev": "./scripts/watch-build.dev.sh"
   },
   "dependencies": {},
   "devDependencies": {
