--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "angular-cli": {},
   "author": "interfacewerk GmbH",
   "main": "npm run ng s",
-  "release": {
-  },
+  "release": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/interfacewerk/iwerk-angular-ui.git"
@@ -24,7 +23,6 @@
     "send-coverage": "cat coverage/lcov.info | coveralls",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e-ci": "ng e2e",
-    "release": "standard-version",
     "e2e": "./scripts/e2e.dev.sh",
     "build:dev": "./scripts/watch-build.dev.sh",
     "travis-deploy-once": "travis-deploy-once",
@@ -60,14 +58,13 @@
     "protractor": "~5.1.2",
     "rxjs": "^5.5.0",
     "semantic-release": "^15.4.0",
-    "standard-version": "^4.2.0",
+    "travis-deploy-once": "^5.0.0",
     "ts-node": "~4.1.0",
     "tsickle": "^0.27.5",
     "tslib": "1.9.0",
     "tslint": "^5.0.0",
     "typescript": "~2.4.2",
-    "zone.js": "^0.8.4",
-    "travis-deploy-once": "^5.0.0"
+    "zone.js": "^0.8.4"
   },
   "peerDependencies": {
     "@angular/common": "^5.0.0",
