ci(greenkeeper): enable greenkeeper lock file
following this https://github.com/greenkeeperio/greenkeeper-lockfile

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,10 @@ before_install:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - sudo apt-get install google-chrome-stable
+  - '[[ $(node -v) =~ ^v9.*$ ]] || npm install -g npm@latest' # skipped when using node 9
+  - npm install -g greenkeeper-lockfile@1
+before_script: greenkeeper-lockfile-update
+after_script: greenkeeper-lockfile-upload
 addons:
 apt:
 install:
