--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.6.1",
     "@angular/cli": "6.0.1",
     "@angular/common": "^6.0.1",
     "@angular/compiler": "^6.0.1",
@@ -65,17 +66,18 @@
     "tsickle": "^0.28.0",
     "tslib": "1.9.0",
     "tslint": "^5.0.0",
-    "typescript": "~2.8.3",
+    "typescript": "^2.7.2",
     "zone.js": "^0.8.4"
   },
   "peerDependencies": {
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/common": "^6.0.1",
+    "@angular/compiler": "^6.0.1",
+    "@angular/core": "^6.0.1",
+    "@angular/platform-browser": "^6.0.1",
+    "@angular/platform-browser-dynamic": "^6.0.1",
     "core-js": "^2.4.1",
-    "rxjs": "^5.5.0",
+    "rxjs": "^6.1.0",
+    "typescript": "~2.7.2",
     "zone.js": "^0.8.4"
   },
   "config": {
