exclude demo from coverage

--- a/angular.json
+++ b/angular.json
@@ -74,6 +74,9 @@
             "assets": [
               "src/assets",
               "src/favicon.ico"
+            ],
+            "codeCoverageExclude": [
+              "src/app/demo/**/*"
             ]
           }
         },
