--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "semantic-release": "^15.4.0",
     "travis-deploy-once": "^5.0.0",
     "ts-node": "~7.0.1",
-    "tsickle": "^0.32.1",
+    "tsickle": "0.27.5",
     "tslib": "1.9.3",
     "tslint": "^5.0.0",
     "typescript": "~2.4.2",
