ci(semantic-release): fix semantic release usage

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "release": {
     "publish": [
       {
-        "path": "@semantic-release/npm",
-        "pkgRoot": "dist"
+        "path": "@semantic-release/npm"
       }
     ]
   },
