--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ node_js:
   - '8'
 after_success:
   - npm run send-coverage
-  - npm run travis-deploy-once "cd dist && ./node_modules/.bin/semantic-release"
+  - npm run travis-deploy-once "cd dist && ../node_modules/.bin/semantic-release"
 branches:
   except:
     - /^v\d+\.\d+\.\d+$/
