--- a/package.json
+++ b/package.json
@@ -53,15 +53,16 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@angular/cli": "1.7.3",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/compiler-cli": "^5.2.9",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
+    "@angular-devkit/build-angular": "~0.8.0",
+    "@angular/cli": "^6.2.4",
+    "@angular/common": "6.1.9",
+    "@angular/compiler": "6.1.9",
+    "@angular/compiler-cli": "6.1.9",
+    "@angular/core": "6.1.9",
+    "@angular/forms": "6.1.9",
+    "@angular/platform-browser": "6.1.9",
+    "@angular/platform-browser-dynamic": "6.1.9",
+    "@angular/router": "6.1.9",
     "@semantic-release/changelog": "^3.0.0",
     "@semantic-release/git": "^7.0.4",
     "@types/jasmine": "~2.8.3",
@@ -82,25 +83,25 @@
     "ng-packagr": "^2.4.1",
     "nodemon": "^1.17.3",
     "protractor": "~5.4.0",
-    "rxjs": "^5.5.0",
+    "rxjs": "^6.3.3",
     "semantic-release": "^15.8.0",
     "travis-deploy-once": "^5.0.0",
     "ts-node": "~7.0.1",
     "tsickle": "0.27.5",
     "tslib": "1.9.3",
     "tslint": "^5.0.0",
-    "typescript": "~2.4.2",
-    "zone.js": "^0.8.4"
+    "typescript": "2.9.2",
+    "zone.js": "^0.8.26"
   },
   "peerDependencies": {
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/common": "6.1.9",
+    "@angular/compiler": "6.1.9",
+    "@angular/core": "6.1.9",
+    "@angular/platform-browser": "6.1.9",
+    "@angular/platform-browser-dynamic": "6.1.9",
     "core-js": "^2.4.1",
-    "rxjs": "^5.5.0",
-    "zone.js": "^0.8.4"
+    "rxjs": "^6.3.3",
+    "zone.js": "^0.8.26"
   },
   "config": {
     "commitizen": {
