refactor(docs): scripts to generate github page folder

--- a/package.json
+++ b/package.json
@@ -38,8 +38,9 @@
     "serve-aot": "ng serve --aot=true",
     "build-aot": "ng build --aot=true",
     "build": "ng-packagr -p package.json",
-    "build:docs": "npm run compodoc && npm run ng build demo",
+    "build:docs": "npm run compodoc && npm run ng -- build demo --output-path=docs --base-href https://interfacewerk.github.io/iwerk-angular-ui/",
     "start": "ng serve",
+    "start:docs": "ng serve demo",
     "lint": "ng lint",
     "test": "ng test --code-coverage",
     "test-once": "ng test --watch=false",
