--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "./node_modules/ng-packagr/package.schema.json",
   "name": "iwerk-angular-ui",
   "version": "0.0.0-development",
   "license": "MIT",
@@ -119,6 +120,12 @@
   "ngPackage": {
     "lib": {
       "entryFile": "src/public_api.ts"
-    }
+    },
+    "whitelistedNonPeerDependencies": [
+      "tslib",
+      "@fortawesome/angular-fontawesome",
+      "@fortawesome/fontawesome-svg-core",
+      "@fortawesome/free-solid-svg-icons"
+    ]
   }
 }
