--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "start:docs": "ng serve demo",
     "lint": "ng lint",
     "test": "ng test --code-coverage",
-    "test-once": "ng test --watch=false",
-    "test-ci": "ng test --watch=false --code-coverage",
+    "test-ci": "ng test --code-coverage",
     "send-coverage": "cat coverage/lcov.info | coveralls",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e-ci": "ng e2e",
