--- a/angular.json
+++ b/angular.json
@@ -17,6 +17,7 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/assets",
+              "src/favicon",
               "src/favicon.ico"
             ],
             "styles": [
