feat(angular): upgrade to Angular 7

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "declaration": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "importHelpers": true,
     "noUnusedLocals": true,
     "noImplicitAny": true,
     "strictNullChecks": false,
