--- a/package.json
+++ b/package.json
@@ -59,23 +59,23 @@
     "@fortawesome/free-solid-svg-icons": "^5.5.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.10.7",
-    "@angular/cli": "^6.2.4",
-    "@angular/common": "6.1.9",
-    "@angular/compiler": "6.1.9",
-    "@angular/compiler-cli": "6.1.9",
-    "@angular/core": "6.1.9",
-    "@angular/forms": "6.1.9",
-    "@angular/platform-browser": "6.1.9",
-    "@angular/platform-browser-dynamic": "6.1.9",
-    "@angular/router": "6.1.9",
+    "@angular-devkit/build-angular": "~0.12.0",
+    "@angular/cli": "^7.2.1",
+    "@angular/common": "7.2.0",
+    "@angular/compiler": "7.2.0",
+    "@angular/compiler-cli": "7.2.0",
+    "@angular/core": "7.2.0",
+    "@angular/forms": "7.2.0",
+    "@angular/platform-browser": "7.2.0",
+    "@angular/platform-browser-dynamic": "7.2.0",
+    "@angular/router": "7.2.0",
     "@compodoc/compodoc": "^1.1.6",
     "@semantic-release/changelog": "^3.0.0",
     "@semantic-release/git": "^7.0.4",
     "@types/jasmine": "~3.3.0",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "^10.12.7",
-    "codelyzer": "^4.3.0",
+    "codelyzer": "4.5.0",
     "commitizen": "^3.0.0",
     "core-js": "^2.4.1",
     "coveralls": "^3.0.0",
@@ -87,7 +87,7 @@
     "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "^2.0.2",
     "karma-jasmine": "^1.0.2",
-    "ng-packagr": "^2.4.1",
+    "ng-packagr": "4.4.5",
     "nodemon": "^1.18.9",
     "protractor": "~5.4.0",
     "rxjs": "^6.3.3",
@@ -95,17 +95,12 @@
     "travis-deploy-once": "^5.0.0",
     "ts-node": "~7.0.1",
     "tsickle": "0.34.0",
-    "tslib": "1.9.3",
+    "tslib": "^1.9.0",
     "tslint": "^5.0.0",
-    "typescript": "2.9.2",
+    "typescript": "3.2.2",
     "zone.js": "^0.8.26"
   },
   "peerDependencies": {
-    "@angular/common": "6.1.9",
-    "@angular/compiler": "6.1.9",
-    "@angular/core": "6.1.9",
-    "@angular/platform-browser": "6.1.9",
-    "@angular/platform-browser-dynamic": "6.1.9",
     "core-js": "^2.4.1",
     "rxjs": "^6.3.3",
     "zone.js": "^0.8.26"
