--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,12 @@ cache:
     - ~/.npm
 notifications:
   email: false
+addons:
+  chrome: stable
 before_install:
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - sudo apt-get install google-chrome-stable
 addons:
 apt:
 install:
