--- a/package.json
+++ b/package.json
@@ -80,13 +80,13 @@
     "core-js": "^2.4.1",
     "coveralls": "^3.0.0",
     "cz-conventional-changelog": "^2.0.0",
-    "jasmine-core": "3.2.1",
+    "jasmine-core": "3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "3.1.4",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "^2.0.2",
-    "karma-jasmine": "^1.0.2",
+    "karma-jasmine": "2.0.1",
     "ng-packagr": "4.4.5",
     "nodemon": "^1.18.9",
     "protractor": "~5.4.0",
