chore(test): remove demo files from coverage report

--- a/angular.json
+++ b/angular.json
@@ -75,6 +75,9 @@
             "assets": [
               "src/assets",
               "src/favicon.ico"
+            ],
+            "codeCoverageExclude": [
+              "src/app/demo/**/*.ts",
             ]
           }
         },
