feat(navigation): implement navigation component

--- a/angular.json
+++ b/angular.json
@@ -162,6 +162,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
+            "port": 4201,
             "browserTarget": "demo:build"
           },
           "configurations": {
