--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,7 @@ apt:
 install:
   - npm install
 script:
-  - npm run lint
-  - npm run test-ci
-  - npm run build
+  - npm run lint && npm run test-ci && npm run build
 node_js:
   - '9'
   - '8'
