--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "^2.0.2",
     "karma-jasmine": "2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
     "ng-packagr": "4.7.1",
     "node-html-parser": "^1.1.12",
     "nodemon": "^1.18.10",
