--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "start": "ng serve",
     "start:docs": "ng serve demo",
     "lint": "ng lint",
-    "test": "ng test --code-coverage",
-    "test-ci": "ng test --code-coverage --project=iwerk-angular-ui",
+    "test": "ng test --code-coverage --project=iwerk-angular-ui --watch=true",
+    "test-ci": "ng test --code-coverage --project=iwerk-angular-ui --watch=false",
     "send-coverage": "cat coverage/lcov.info | coveralls",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e-ci": "ng e2e",
