--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,6 @@ deploy:
   skip-cleanup: true
   github-token: $GH_TOKEN
   keep-history: true
-  local-dir: ./docs
+  local-dir: ./dist/docs
   on:
     branch: master
