--- a/angular.json
+++ b/angular.json
@@ -48,6 +48,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
+            "host": "0.0.0.0",
             "browserTarget": "iwerk-angular-ui:build"
           },
           "configurations": {
