--- a/angular.json
+++ b/angular.json
@@ -49,6 +49,7 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "host": "0.0.0.0",
+            "port": 4300,
             "browserTarget": "iwerk-angular-ui:build"
           },
           "configurations": {
