--- a/angular.json
+++ b/angular.json
@@ -193,6 +193,158 @@
           }
         }
       }
+    },
+    "material-app": {
+      "root": "projects/examples/material-app/",
+      "sourceRoot": "projects/examples/material-app/src",
+      "projectType": "application",
+      "prefix": "app",
+      "schematics": {
+        "@schematics/angular:component": {
+          "styleext": "sass",
+          "skipTests": true
+        },
+        "@schematics/angular:class": {
+          "skipTests": true
+        },
+        "@schematics/angular:directive": {
+          "skipTests": true
+        },
+        "@schematics/angular:guard": {
+          "skipTests": true
+        },
+        "@schematics/angular:module": {
+          "skipTests": true
+        },
+        "@schematics/angular:pipe": {
+          "skipTests": true
+        },
+        "@schematics/angular:service": {
+          "skipTests": true
+        }
+      },
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/material-app",
+            "index": "projects/examples/material-app/src/index.html",
+            "main": "projects/examples/material-app/src/main.ts",
+            "polyfills": "projects/examples/material-app/src/polyfills.ts",
+            "tsConfig": "projects/examples/material-app/tsconfig.app.json",
+            "assets": [
+              "projects/examples/material-app/src/favicon.ico",
+              "projects/examples/material-app/src/assets"
+            ],
+            "styles": [
+              "projects/examples/material-app/src/styles.sass"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "projects/examples/material-app/src/environments/environment.ts",
+                  "with": "projects/examples/material-app/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "port": 4203,
+            "host": "0.0.0.0",
+            "browserTarget": "material-app:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "material-app:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "material-app:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/examples/material-app/src/test.ts",
+            "polyfills": "projects/examples/material-app/src/polyfills.ts",
+            "tsConfig": "projects/examples/material-app/tsconfig.spec.json",
+            "karmaConfig": "projects/examples/material-app/karma.conf.js",
+            "styles": [
+              "projects/examples/material-app/src/styles.css"
+            ],
+            "scripts": [],
+            "assets": [
+              "projects/examples/material-app/src/favicon.ico",
+              "projects/examples/material-app/src/assets"
+            ]
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/examples/material-app/tsconfig.app.json",
+              "projects/examples/material-app/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "material-app-e2e": {
+      "root": "projects/examples/material-app-e2e/",
+      "projectType": "application",
+      "prefix": "",
+      "architect": {
+        "e2e": {
+          "builder": "@angular-devkit/build-angular:protractor",
+          "options": {
+            "protractorConfig": "projects/examples/material-app-e2e/protractor.conf.js",
+            "devServerTarget": "material-app:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "material-app:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": "projects/examples/material-app-e2e/tsconfig.e2e.json",
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }
   },
   "defaultProject": "iwerk-angular-ui",
