--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "test": "ng test --code-coverage --project=iwerk-angular-ui --watch=true",
     "test-ci": "ng test --code-coverage --project=iwerk-angular-ui --watch=false",
     "send-coverage": "cat coverage/lcov.info | coveralls",
-    "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "e2e-ci": "ng e2e",
+    "pree2e": "webdriver-manager update --standalone false --gecko false --versions.chrome=74.0.3729.169",
+    "e2e-ci": "ng e2e iwerk-angular-ui-e2e --webdriver-update=false",
     "e2e": "./scripts/e2e.dev.sh",
     "build:dev": "./scripts/watch-build.dev.sh",
     "travis-deploy-once": "travis-deploy-once",
@@ -77,6 +77,7 @@
     "@types/jasmine": "~3.3.0",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "^12.0.0",
+    "@types/selenium-webdriver": "^4.0.0",
     "codelyzer": "4.5.0",
     "commitizen": "^3.0.0",
     "core-js": "^2.4.1",
@@ -105,6 +106,7 @@
     "tslib": "^1.9.0",
     "tslint": "^5.0.0",
     "typescript": "3.2.2",
+    "visual-testing-report": "https://github.com/kevinmerckx/visual-testing-report#0d6e797992e970e8198da553557172f12828cfd5",
     "zone.js": "^0.8.26"
   },
   "peerDependencies": {
