ci(e2e): add E2E browserstack config

--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "^12.0.0",
     "@types/selenium-webdriver": "^4.0.0",
+    "browserstack-local": "^1.4.0",
     "codelyzer": "4.5.0",
     "commitizen": "^3.0.0",
     "core-js": "^2.4.1",
@@ -97,7 +98,7 @@
     "node-html-parser": "^1.1.12",
     "node-sass": "^4.12.0",
     "nodemon": "^1.18.10",
-    "protractor": "~6.0.0",
+    "protractor": "^6.0.0",
     "rxjs": "^6.3.3",
     "semantic-release": "^15.13.0",
     "travis-deploy-once": "^5.0.0",
