ci(xvfb): use service

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ script:
   - npm run lint && npm run test-ci && npm run pree2e && npm run e2e-ci && npm run build && npm run build:docs
 node_js:
   - '10'
+services:
+    - xvfb
 after_success:
   - npm run send-coverage
   - npm run travis-deploy-once "cd dist && ../node_modules/.bin/semantic-release"
